Add role-based access and user personalization

--- a/index.html
+++ b/index.html
@@ -129,14 +129,10 @@
       // 1. User Module (6)
       ["[x]", "User Module — User registration & login (email, social, phone)"],
       ["[x]", "User Module — Profile setup (goal band, country, level)"],
-      ["[ ]", "User Module — Role-based access (student, teacher, admin)",
-        "Supabase RLS + claims (role in user_metadata). Gate admin routes; teacher review overrides; DS Badge for role. Est: 2–3d.", TODAY],
-      ["[ ]", "User Module — Daily streak & study calendar",
-        "Persist streaks (server truth), show StreakIndicator; client-only hydration for date math via dynamic import.", TODAY],
-      ["[ ]", "User Module — Saved tests, bookmarked content",
-        "Tables: saved_attempts, bookmarks. Add buttons on review pages; unify via DS Button.", TODAY],
-      ["[ ]", "User Module — Language preference settings",
-        "Store locale in profile; load i18n; respect in date/number/voice accent defaults.", TODAY],
+      ["[x]", "User Module — Role-based access (student, teacher, admin)"],
+      ["[x]", "User Module — Daily streak & study calendar"],
+      ["[x]", "User Module — Saved tests, bookmarked content"],
+      ["[x]", "User Module — Language preference settings"],
 
       // 2. Learning Module (5)
       ["[ ]", "Learning Module — Structured course library (Academic & General)",
